trunk/Archive2/93/8cc4dc9617aa62/output
main.cpp: In function 'int main()':
main.cpp:5:6: error: expected unqualified-id before '[' token
     A[] pointersToA = A[3];
      ^
main.cpp:6:5: error: 'pointersToA' was not declared in this scope
     pointersToA[0] = &B();
     ^
main.cpp:6:25: error: 'B' was not declared in this scope
     pointersToA[0] = &B();
                         ^
main.cpp:7:25: error: 'C' was not declared in this scope
     pointersToA[1] = &C();
                         ^
main.cpp:8:25: error: 'D' was not declared in this scope
     pointersToA[2] = &D();
                         ^
